Changed the way forecast data array formating

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,15 @@
+
+
 .forecast-card {
   color: #fff;
+  font-size: 1rem;
+  background-color: #007bff;
 }
 
+.forecast-card span {
+  font-size: 0.8rem;
+}
+
+.day-title {
+  display: inline;
+}
