--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,9 @@
-
+.weather-header {
+  background: linear-gradient(90deg,
+      rgba(52, 95, 183, 1) 0%,
+      rgba(9, 9, 121, 1) 58%,
+      rgba(2, 0, 36, 1) 99%)
+}
 
 .forecast-card {
   color: #fff;
@@ -12,4 +17,49 @@
 
 .day-title {
   display: inline;
+}
+
+#modal {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-inner {
+ position: relative;
+  padding: 30px;
+  background-color: rgb(255,255,255);
+  z-index: 1001;
+  border-radius: 5px;
+}
+
+.close-icon{
+  position: absolute;
+  right:-10px;
+  top: -17px;
+  color: red;
+  padding: 5px;
+  font-weight: 900;
+  cursor: pointer;
+}
+
+#loading {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  color: #000 ;
+  font-size: 2rem;
 }
